logo was getting cut off on the right side, trying to fix it

--- a/css/style.css
+++ b/css/style.css
@@ -2330,8 +2330,8 @@ a.btn:focus {
     #intro.home-video {
         height: 350px;
     }
-    .svgLogo {
+    /* .svgLogo {
         height: 40px;
         width: 120px;
-    }
+    }*/
 }
